// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Avatar Matches snapshot 1`] = `
.c0 {
  width: 48px;
  height: 48px;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  background-color: rgb(228,230,237);
  border-radius: 50%;
  object-fit: cover;
}

<div>
  <img
    class="c0 "
    src="/img.jpg"
  />
</div>
`;

exports[`Avatar Matches snapshot 2`] = `
.c0 {
  width: 48px;
  height: 48px;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  background-color: rgb(228,230,237);
  border-radius: 50%;
  object-fit: cover;
  width: 32px;
  height: 32px;
}

<div>
  <img
    class="c0 "
    src="/img.jpg"
  />
</div>
`;

exports[`Avatar Matches snapshot 3`] = `
.c0 {
  width: 48px;
  height: 48px;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  background-color: rgb(228,230,237);
  border-radius: 50%;
  object-fit: cover;
  width: 60px;
  height: 60px;
}

<div>
  <img
    class="c0 "
    size="60"
    src="/img.jpg"
  />
</div>
`;
